small fixes on mobile version

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -375,9 +375,7 @@ nav, nav * {
     width: auto;
 }
 
-.nav-search .input-group {
-    min-width: 400px !important;
-}
+
 /*--------------------------------------------------------------
     Notification and messages
 --------------------------------------------------------------*/
